--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                                 <span>Python</span>
                                 <span>HTML</span>
                                 <span>CSS</span>
+                                <span>JavaScript</span>
                                 <span>PHP</span>
                                 <span>MySQL</span>
                             </div>
