--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                         <img src="avsa.jpg" alt="avatar">
                     </div>
                 </div>
+                <div class="nav-button">
+                     <button class="btn" onclick="downloadResume()">Download Resume <i class="uil uil-file-alt"></i></button>
+                </div>
             </section>
             <!-- -------------- ABOUT ME BOX ---------------- -->
             <section class="section" id="about">
@@ -125,8 +128,7 @@
             <section class="section" id="projects">
                 <div class="top-header">
                     <h1>Projects</h1>
-                    <p>(click on the box to see the project)
-                    <p>
+                    <p>(click on the box to see the project)</p>
                 </div>
                 <div class="project-container">
                     <!-- Project 1 -->
