--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <img src="avsa.jpg" alt="avatar">
                     </div>
                 </div>
-                <div class="nav-button">
+                <div class="featured-text-btn">
                      <button class="btn" onclick="downloadResume()">Download Resume <i class="uil uil-file-alt"></i></button>
                 </div>
             </section>
